# VG_Architectural_Adversarial_Robustness

./: .gitignore  BaseCNN.py  Cayley.py  DBCNN.py  KonCept-ckpt  KonIQ-10k_resnet101+0.1_hsic+relu_PGD=1+resize=498x664.csv  KonIQ-10k_resnet101+0.1_hsic+relu_PGD=1.csv  KonIQ-10k_resnet101+0.1_pls+relu_PGD=1.csv  Linearity-ckpt  NIPS_resnet101+0.1_displs+relu_PGD=1.csv  NIPS_resnet101+0.1_hsic+relu_PGD=1+resize=498x664.csv  NIPS_resnet101+0.1_hsic+relu_PGD=1.csv  NIPS_resnet101+0.1_pls+relu_PGD=1.csv  NIPS_vgg16+relu_PGD=1.csv  NT_Frelu_elu  README.md  SCNN.py  activ.py  args.py  attack.ipynb  attack.py  attack_cls.py  attacker.py  build_config.py  config-backbone|inceptionresnetv2-activation|relu_PGD=1.yaml  config.conf  config.yaml  conv_norms.ipynb  data_loader.py  data_loader_test.py  denorm.ipynb  dockerfile  error  eval.py  folders.py  generate_results.py  graphs.ipynb  graphs.py  graphs_resnet101.ipynb  graphs_resnet50.ipynb  (+79 more)
.ipynb_checkpoints/: attack-checkpoint.ipynb  graphs-checkpoint.ipynb  graphs_resnet101-checkpoint.ipynb
KDE/: __init__.py  modules.py  transformer.py  utils.py
LinearityIQA/: ComModel.py  IQAdataset.py  IQAmodel.py  IQAperformance.py  KonCept512.py  Linearity.py  __init__.py  activ.py  activation.py  main.py  mixer.py  modified_ignite_engine.py  pruning.py  relu.txt  requirements.txt  requirementst.txt  resnet_cifar10_m.py  silu.txt  test_dataset.py  train.py  wide_resnet34.py
VOneNet/: __init__.py  back_ends.py  modules.py  vonenet.py
attacks/: apgd.py  color.py  fgsm.py  iterative.py  korhonen.py  pgd.py  stadv.py  uap.py  zhang.py
conf/: config.yaml
csv/: KonIQ-10k_csv_apgd=3.csv  KonIQ-10k_csv_apgd=5.csv  KonIQ-10k_csv_apgd=8.csv  KonIQ-10k_inceptionresnetv2+adv+relu_apgd=1.csv  KonIQ-10k_inceptionresnetv2+adv+relu_apgd=3.csv  KonIQ-10k_inceptionresnetv2+adv+relu_apgd=5.csv  KonIQ-10k_inceptionresnetv2+adv+relu_apgd=8.csv  KonIQ-10k_inceptionresnetv2+adv+relu_color=10.csv  KonIQ-10k_inceptionresnetv2+adv+relu_korhonen=50.csv  KonIQ-10k_inceptionresnetv2+adv+relu_uap=10.csv  KonIQ-10k_inceptionresnetv2+adv+relu_zhang=10.csv  KonIQ-10k_inceptionresnetv2+cayley2+0.1_l2+relu_apgd=1.csv  KonIQ-10k_inceptionresnetv2+cayley2+0.1_l2+relu_apgd=3.csv  KonIQ-10k_inceptionresnetv2+gr+relu_apgd=1.csv  (+371 more)
(+999 files in other folders)
