[project]
name = "vg-architectural-adversarial-robustness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.1.0",
    "asttokens>=2.4.1",
    "cachetools>=5.3.3",
    "certifi>=2024.7.4",
    "charset-normalizer>=3.3.2",
    "clearml>=1.16.4",
    "colorama>=0.4.6",
    "contourpy>=1.2.1",
    "cycler>=0.12.1",
    "einops>=0.8.0",
    "executing>=2.0.1",
    "filelock>=3.15.4",
    "fonttools>=4.53.1",
    "fsspec>=2024.6.1",
    "grpcio>=1.64.1",
    "h5py>=3.11.0",
    "icecream>=2.1.3",
    "idna>=3.7",
    "jinja2>=3.1.4",
    "joblib>=1.4.2",
    "kiwisolver>=1.4.5",
    "markdown>=3.6",
    "markupsafe>=2.1.5",
    "matplotlib>=3.9.0",
    "mpmath>=1.3.0",
    "networkx>=3.3",
    "numpy>=2.0.0",
    "nvidia-cublas-cu12>=12.1.3.1",
    "nvidia-cuda-cupti-cu12>=12.1.105",
    "nvidia-cuda-nvrtc-cu12>=12.1.105",
    "nvidia-cuda-runtime-cu12>=12.1.105",
    "nvidia-cudnn-cu12>=8.9.2.26",
    "nvidia-cufft-cu12>=11.0.2.54",
    "nvidia-curand-cu12>=10.3.2.106",
    "nvidia-cusolver-cu12>=11.4.5.107",
    "nvidia-cusparse-cu12>=12.1.0.106",
    "nvidia-nccl-cu12>=2.20.5",
    "nvidia-nvjitlink-cu12>=12.5.82",
    "nvidia-nvtx-cu12>=12.1.105",
    "oauthlib>=3.2.2",
    "packaging>=24.1",
    "pandas>=2.2.2",
    "pillow>=10.4.0",
    "prettytable>=3.12.0",
    "protobuf>=4.25.3",
    "pygments>=2.18.0",
    "pyparsing>=3.1.2",
    "python-dateutil>=2.9.0.post0",
    "pytorch-quantization>=2.1.2",
    "pytz>=2024.1",
    "pyyaml>=6.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.5.1",
    "scipy>=1.14.0",
    "six>=1.16.0",
    "sphinx-glpi-theme>=0.6",
    "sympy>=1.13.0",
    "tensorboard>=2.18.0",
    "threadpoolctl>=3.5.0",
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "tqdm>=4.66.4",
    "triton>=2.3.1",
    "typing-extensions>=4.12.2",
    "tzdata>=2024.1",
    "urllib3>=2.2.2",
    "werkzeug>=3.0.3",
    "zipp>=3.19.2",
]

[tool.uv.sources]
pytorch-quantization = { index = "pytorch-quantization" }

[[tool.uv.index]]
name = "pytorch-quantization"
url = "https://pypi.ngc.nvidia.com"
default = false
explicit = true


